GeneWeb version 3.05
--------------------

* GeneWeb Service/CGI (gwd)
  - [30 Apr 00] Fixed little problem with displaying by places for the ones
    containing several (at least two) indications between parentheses.

GeneWeb version 3.04
--------------------

* Languages
  - [06 Apr 00] Added Afrikaans (Louis Kruger).

* Setup program (gwsetup)
  - [09 Apr 00] Fixed some bugs in Linux rpm package causing gwsetup to
    fail and the browser to answer "no output".

* GeneWeb Service/CGI (gwd)
  - [29 Apr 00] Fixed bug in "descendants", "families with encoding": the
    marriage dates of grandchildren could sometime be erroneously the ones
    of the children.
  - [16 Apr 00] Fixed problem: the kde browser (Konqueror) seems not to handle
    the password protocol. Went around the problem by treating it as it were
    in CGI mode, where the password has to be given in a form.
  - [14 Apr 00] Fixed bug: could no more access a person by his key after
    having changed his name, in the case when the initial first name or
    surname was a question marks *and* the changed name had nevertheless
    the same signature.
    Example:
       before: first name = "John Smith"; surname = "?"
        after: first name = "John"; surname = "Smith"
    When doing this fix, there were no more way to access "John Smith" by
    his key, particularly in forms (which is rather annoying).
  - [13 Apr 00] Added nice display of language code when mouse over the
    flag (Emmanuelle Visseaux's code).
  - [11 Aor 00] Added optional displaying of images in descendants by tree
    and in relationship trees.
  - [03 Apr 00] In ancestor page, added horizontal displaying.
  - [02 Apr 00] In surname page, added ability to click on a branch number
    to display only that one.
  - [27 Mar, 05 Apr 00] Added displaying of places/surnames from welcome page.

* Gedcom to GeneWeb (ged2gwb)
  - [11 Apr 00] Fixed bug+problem of adoptive children when they are also