@@ -1,4 +1,4 @@
-(* $Id: phonygwd.ml,v 3.1 2000-01-10 02:14:41 ddr Exp $ *)
+(* $Id: phonygwd.ml,v 3.2 2000-05-02 02:38:22 ddr Exp $ *)
 (* Copyright (c) 2000 INRIA *)
 
 value port_selected = ref 2317;
@@ -57,7 +57,7 @@ value main () =
        return exit 1
      else ();
      close_in (open_in fname.val);
-     Wserver.f None port_selected.val 0 (Some 4) (None, None) connection;
+     Wserver.f None port_selected.val 0 (Some 4) connection;
   return ()
 ;
 
